2004-01-12  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Changed Previous and Next to Previous Page and Next Page, per UI review.

2004-01-12  Richard Hult  <richard@imendio.com>

	* src/yelp-toc-pager.c (menu_write_page): Set encoding to utf-8 in
	the generated html. Fixes bug #131186.

2004-01-11  Shaun McCance  <shaunm@gnome.org>

	* src/Makefile.am:
	* src/test-pager.c:
	* src/yelp-db-pager.c:
	* src/yelp-io-channel.c:
	* src/yelp-man-pager.c:
	* src/yelp-man-pager.h:
	* src/yelp-uri.c:
	* src/yelp-window.c:
	* stylesheets/Makefile.am:
	- Oh man(1), this is the start of a beautiful relationship.

2004-01-11  Shaun McCance  <shaunm@gnome.org>

	* src/test-pager.c:
	* src/yelp-base.c:
	* src/yelp-db-pager.c:
	* src/yelp-db-pager.h:
	* src/yelp-history.c:
	* src/yelp-history.h:
	* src/yelp-html-gtkhtml2.c:
	* src/yelp-html.h:
	* src/yelp-pager.c:
	* src/yelp-pager.h:
	* src/yelp-toc-pager.c:
	* src/yelp-uri.c:
	* src/yelp-uri.h:
	* src/yelp-window.c:
	* src/yelp-window.h:
	- ... in which I change YelpURI around.  Again.

2004-01-10  Shaun McCance  <shaunm@gnome.org>

	* src/.cvsignore: Added test-man-parser to .cvsignore

	* src/Makefile.am:
	* src/yelp-error.c:
	* src/yelp-error.h:
	* src/yelp-io-channel.c:
	* src/yelp-io-channel.h:
	* src/yelp-man-parser.c:
	- Kick-ass custom GIOChannel that automatically uses zlib and libbz2.

	* stylesheets/.cvsignore: Added l10n.xml to .cvsignore

2004-01-10  Shaun McCance  <shaunm@gnome.org>

	* stylesheets/l10n.xml.in:
	- Added lots of comments.

	* test/testdoc1/testdoc1.xml:
	- Made my email address correct.

2004-01-10  Eric Baudais  <drake@gnome.org

	* test/testdoc1/testdoc1.xml
	- Added some more glossary tests.

2004-01-09  Shaun McCance  <shaunm@gnome.org>

	* stylesheets/l10n.xml.in
	- s/Bigliography/Bibliography/

2004-01-09  Shaun McCance  <shaunm@gnome.org>

	* stylesheets/db2html-xref.xsl:
	- More link fixes, making endterm cases look right.

	* test/Makefile.am:
	* test/autogen.sh: