@@ -26,7 +26,7 @@
 			<surname>McCance</surname> 
 			<affiliation> 
 				<orgname>GNOME Documentation Project</orgname> 
-				<address><email>patanjali@codito.com</email></address> 
+				<address><email>shaunm@gnome.org</email></address> 
 			</affiliation> 
 		</author> 
 	</authorgroup>
