@@ -1,3 +1,11 @@
+2004-01-14  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-base.c:
+	- Don't require absolute path for a file given on the command line.
+
+	* test/testdoc1/testdoc1.xml:
+	- That really isn't my email address.  Really.
+
 2004-01-12  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-window.c:
